# greedy_search

./: Makefile  README.md  ayuda  main.py  pyproject.toml
docs/source/: conf.py  greedy_search.rst  index.rst  modules.rst
src/greedy_search/: __init__.py  graficas.py  main.py
tests/: test_proba.py
